kubernetes/ingress/apicurio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio
  namespace: apicurio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-ovh
spec:
  ingressClassName: traefik
  rules:
    - host: apicurio.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio
                port:
                  number: 80
